# sofia-sip

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHTS  ChangeLog  Makefile.am  README  README.developers  RELEASE  RELEASE.template  TODO  autogen.sh  config.h.cmake  configure.ac  server.pem  server_key.pem  sofia-sip.spec.in
libsofia-sip-ua/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  dummy.c  sofia.am
libsofia-sip-ua-glib/: ChangeLog  Makefile.am
libsofia-sip-ua-glib/docs/: Doxyfile.conf
libsofia-sip-ua-glib/nua-glib/: Doxyfile  Makefile.am  nua_glib.c  nua_glib.docs  nua_glib_marshal.list  nua_glib_op.c  nua_glib_op.h  nua_glib_priv.h  test_nua_glib.c
libsofia-sip-ua-glib/su-glib/: Doxyfile  Makefile.am  su_glib.docs  su_source.c  su_source_test.c
libsofia-sip-ua/bnf/: CMakeLists.txt  Doxyfile  Makefile.am  bnf.c  bnf.docs  bnf.h  torture_bnf.c
libsofia-sip-ua/docs/: ChangeLog  Doxyfile  Doxyfile.aliases  Doxyfile.conf  Makefile.am  conformance.docs  docguide.docs  hide_emails.sh  mainpage.docs  sofia-footer.html.in
libsofia-sip-ua/features/: CMakeLists.txt  Doxyfile  Makefile.am  features.c  features.docs  sofia_sip_features.c  sofia_sip_features.docs  sofia_sip_features.h.in
libsofia-sip-ua/http/: CMakeLists.txt  Doxyfile  Makefile.am  http.docs  http.h  http_basic.c  http_dll.h  http_extra.c  http_hclasses.h  http_header.c  http_header.h  http_inlined.c  http_parser.c  http_parser.h  http_parser_table.c.in  http_protos.h.in  http_status.c  http_status.h  http_tag.c.in  http_tag.h.in  http_tag_class.c  http_tag_class.h  http_test.c  test_http.c
libsofia-sip-ua/ipt/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  base64.c  base64.h  ipt.def  ipt.docs  rc4.c  rc4.h  sha1.c  sha1.h  sha1test.c  string0.c  string0.h  token64.c  token64.h  torture_base64.c  ucs2.c  ucs4.c  uniqueid.h  utf8.c  utf8.h  utf8internal.h  utf8test.c
libsofia-sip-ua/iptsec/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  auth_client.c  auth_client.h  auth_common.c  auth_digest.c  auth_digest.h  auth_digest_test.c  auth_dll.h  auth_module.c  auth_module.h  auth_module_http.c  auth_module_sip.c  auth_ntlm.c  auth_plugin.c  auth_plugin.h  auth_plugin_delayed.c  auth_plugin_ntlm.c  auth_tag.c  iptsec.def  iptsec.docs  iptsec_debug.c  iptsec_debug.h  test_auth_digest.c  testpasswd
libsofia-sip-ua/msg/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  memspn.c  msg.c  msg.def  msg.docs  msg.h  msg_addr.h  msg_auth.c  msg_auth.h  msg_basic.c  msg_bnf.h  msg_buffer.h  msg_date.c  msg_date.h  msg_dll.h  msg_generic.c  msg_header.h  msg_header_copy.c  msg_header_make.c  msg_inlined.c  msg_internal.h  msg_mclass.c  msg_mclass.h  msg_mclass_hash.h  msg_mime.c  msg_mime.h  msg_mime_protos.h.in  msg_mime_table.c.in  msg_name_hash.c  msg_parser.awk  msg_parser.c  msg_parser.h  msg_parser_util.c  msg_protos.h.in  msg_tag.c  msg_tag_class.h  msg_test.c  (+11 more)
libsofia-sip-ua/nea/: CMakeLists.txt  Doxyfile  Makefile.am  nea.c  nea.docs  nea.h  nea_debug.c  nea_debug.h  nea_dll.h  nea_event.c  nea_server.c  nea_tag.c  nea_tag.h
libsofia-sip-ua/nta/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  check_nta_api.c  check_nta_server.c  invite.msc  nta.c  nta.def  nta.docs  nta.h  nta_check.c  nta_compat.c  nta_compat.h  nta_dll.h  nta_internal.h  nta_stateless.h  nta_tag.c  nta_tag.h  nta_test.c  nta_tport.h  portbind.c  run_nta_test  run_test_nta  sl_read_payload.c  sl_utils.c  sl_utils.def  sl_utils.docs  sl_utils.h  sl_utils_log.c  sl_utils_print.c  test_nta.c  test_nta_api.c
libsofia-sip-ua/nth/: CMakeLists.txt  Doxyfile  Makefile.am  http-client.c  http-server.c  nth.docs  nth.h  nth_client.c  nth_server.c  nth_tag.c  nth_tag.h  nth_test.c  test_nth.c
libsofia-sip-ua/nua/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README  check_nua.c  check_nua.h  check_register.c  check_session.c  check_simple.c  mss.sdp  nua.c  nua.def  nua.docs  nua.h  nua_client.c  nua_common.c  nua_dialog.c  nua_dialog.h  nua_event_server.c  nua_extension.c  nua_message.c  nua_notifier.c  nua_options.c  nua_params.c  nua_params.h  nua_publish.c  nua_register.c  nua_registrar.c  nua_server.c  nua_session.c  nua_stack.c  nua_stack.h  nua_subnotref.c  nua_tag.c  nua_tag.h  nua_tag_ref.c  outbound.c  outbound.h  s2tester.c  (+27 more)
libsofia-sip-ua/sdp/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  run-tests  run_test_sdp  sdp.c  sdp.def  sdp.docs  sdp.h  sdp.html  sdp_parse.c  sdp_print.c  sdp_rtp.h  sdp_tag.c  sdp_tag.h  sdp_test.c  sdp_torture.c  test_sdp.c  torture_sdp.c
libsofia-sip-ua/sip/: ADD-A-HEADER  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  date_test.c  run_sip_test_msg  sip.def  sip.docs  sip.doxyaliases  sip.h  sip_bad_mask  sip_basic.c  sip_caller_prefs.c  sip_dll.h  sip_event.c  sip_extensions.h  sip_extra.c  sip_extra_headers.txt  sip_feature.c  sip_hclasses.h.in  sip_header.c  sip_header.h  sip_inlined.c  sip_internal.h  sip_mime.c  sip_p_tag.c  sip_parser.c  sip_parser.docs  sip_parser.h  sip_parser_table.c.in  sip_prack.c  sip_pref_util.c  sip_protos.h.in  sip_reason.c  sip_refer.c  sip_rfc2543.c  sip_rfc2543.h.in  sip_security.c  sip_session.c  (+14 more)
libsofia-sip-ua/soa/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  soa.c  soa.docs  soa.h  soa_add.h  soa_asynch.c  soa_session.h  soa_static.c  soa_tag.c  soa_tag.h  test_soa.c
libsofia-sip-ua/sresolv/: CMakeLists.txt  Doxyfile  Makefile.am  example.com  named.conf  resolve_sip.c  rndc.conf  root.zone  run_test_sresolv  sip-dig.c  sres.c  sres_blocking.c  sres_cache.c  sres_sip.c  sresolv.c  (+5 more)
s2check/: CMakeLists.txt  Makefile.am  s2dns.c  s2sip.c  s2tcase.c
tests/: .gitignore  Makefile.am  check2_sofia.c  check2_sofia.h  s2tester.c  s2tester.h  suite2_for_nua.c  test_sip_events.c
utils/: ChangeLog  Doxyfile  Doxyfile.build.in  Doxyfile.in  Makefile.am  apps_utils.h  nua_cli.c  nua_env  options.c  sip-date.c  sip-dig.c  sip-options.c
win32/: ChangeLog  Makefile.am  README.txt  SofiaSIP.dsw  autogen.cmd  build_sources.cmd  check.cmd  config.h  config.h.in  su_configure_win32.h  unistd.h  version_files.cmd
(+442 files in other folders)
