# ref: http://www.gnu.org/software/automake/manual/automake.html

# ----------------------------------------------------------------------

noinst_HEADERS = su_configure_win32.h unistd.h config.h

EXTRA_DIST = SofiaSIP.dsw \
	libsofia-sip-ua/libsofia_sip_ua.dsp \
	libsofia-sip-ua/sofia-sip-ua.def \
	nta_test/nta_test.dsp \
	su/su_alloc_test/su_alloc_test.dsp \
	su/su_root_test/su_root_test.dsp \
	su/su_tag_test/su_tag_test.dsp \
	su/su_test/su_test.dsp \
	su/su_time_test/su_time_test.dsp \
	su/su_timer_test/su_timer_test.dsp \
	su/su_torture/su_torture.dsp \
	su/test_memmem/test_memmem.dsp \
	su/torture_htable/torture_htable.dsp \
	su/torture_rbtree/torture_rbtree.dsp \
	su/torture_su_memmem/torture_su_memmem.dsp \
	su/torture_su_port/torture_su_port.dsp \
	$(PTHREAD_DIST)

PTHREAD_DIST = \
	pthread/ChangeLog \
	pthread/pthread.dll \
	pthread/pthread.def \
	pthread/pthread.lib \
	pthread/semaphore.h \
	pthread/sched.h \
	pthread/md5.sum.txt \
	pthread/pthread.h

